# technopark-tanks

./: .gitignore  CMakeLists.txt  Makefile  README.md  client.cpp  client.h  game.cpp  game_session.cpp  game_session.hpp  makefile  problems.txt  server.cpp  sfml-app  sfml.cpp
include/: game_map.hpp
maps/: 1.txt  map1.tmx  map2.tmx
project/includes/: TmxLevel.h  cam.h  client.h  client_server_config.h  end_event.h  game.h  game_map.hpp  game_session.hpp  map.h  menu.h  messages.hpp  objects.h  server.h  statistics.h  text_event.h  tinyxml2.h
project/src/: TmxLevel.cpp  cam.cpp  client.cpp  end_event.cpp  game.cpp  game_map.cpp  game_session.cpp  map.cpp  map1.tmx  menu.cpp  messages.cpp  objects.cpp  server.cpp  statistics.cpp  text_event.cpp  tinyxml2.cpp
resources/: map1.tmx
src/: game_map.cpp
